--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,4 +17,4 @@ jobs:
           paths:
             - ./vendor
           key: v1-dependencies-{{ checksum "composer.json" }}
-      - run: vendor/bin/phpunit
+      - run: vendor/bin/phpunit --bootstrap vendor/autoload.php --testdox tests"
