add testing command

--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,9 @@
             "email": "sadickjunior@gmail.com"
         }
     ],
+    "scripts": {
+        "test": "phpunit --whitelist src tests --colors=always"
+    },
     "require": {
     },
     "autoload": {
